<resources>
    <string name="app_name">ComeHomeSafe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_maps">Map</string>

    <string name="btn_text_stop_navigation">Stop</string>
    <string name="btn_text_start_navigation">Start</string>

    <string name="title_stop_dialog">Wirklich beenden?</string>
    <string name="text_stop_dialog">Möchtest du die Navigation wirklich beenden?</string>

    <string name="dialog_btn_yes">Ja</string>
    <string name="dialog_btn_no">Nein</string>

    <string name="title_route_dialog">Abweichung von der Route</string>
    <string name="text_route_dialog">Du bist von der Route abgewichen. Ist alles in Ordnung?</string>

    <string name="title_start_dialog">Losgehen</string>
    <string name="text_start_dialog">Möchtest du jetzt losgehen und deinen Begleiter benachrichtigen?</string>

    <string name="title_arrived_dialog">Gut angekommen?</string>
    <string name="text_arrived_dialog">Bist du gut angekommen und möchtest du deinen Begleiter benachrichtigen?</string>

    <string name="dialog_btn_new_route">Ja, neue Route berechnen</string>
    <string name="dialog_btn_contact_companion">Nein, Begleiter kontaktieren</string>

    <string name="dialog_btn_not_yet">Noch nicht</string>

    <string name="arrived_message">Bin gut angekommen.</string>
    <string name="start_message">Bin unterwegs.</string>

    <string name="sent_from"> - gesendet von ComeHomeSafe</string>
    <string name="got_informed"> wurde benachrichtigt</string>
    <string name="send_location">Irgendetwas stimmt nicht. Mein Standort ist: "</string>
    <string name="gps_required">GPS-Permission erforderlich</string>
    <string name="marker_current_location">aktuelle Position</string>
    <string name="marker_destination">Zielort</string>



    <string name="importiere_kontakt_vom_telefon">Importiere Kontakt vom Telefon</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="destination">Ort</string>
    <string name="zu_kontakten_hinzuf_gen">Zu Kontakten hinzufügen</string>
    <string name="zu_orten_hunzuf_gen">Zu Orten hunzufügen</string>

    <string name="name_place">Name</string>
    <string name="strasse">Straße</string>
    <string name="hausnummer">Hausnummer</string>
    <string name="postleitzahl">Postleitzahl</string>
    <string name="stadt">Stadt</string>
    <string name="zu_orte_hinzufuegen">Zu Orte Hinzufügen</string>
    <string name="places">Orte</string>
    <string name="contacts">Kontakte</string>
    <string name="missing_declaration_1">Fehlende Angaben</string>
    <string name="missing_declaration_2">Es wurden nicht alle Felder ausgefüllt</string>
    <string name="delete_place">Ort löschen?</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>
    <string name="delete_contact">Kontakt löschen?</string>
    <string name="nachricht_schreiben">Nachricht schreiben...</string>
    <string name="senden">Senden</string>

    <string-array name="place_list">
        <item>Zuhause</item>
        <item>Arbeit</item>
        <item>Schule</item>
        <item>Universität</item>
        <item>Bar</item>
        <item>Club</item>
        <item>Kino</item>
        <item>Sonstiges</item>
    </string-array>

</resources>
